5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/3396/executions/1706_3032.log
== TEST (2019-04-29 18:22:13) 
-- CODE:
from math import*
x = float(input("x:")
if(x<=0):
	fx= 0
  
-- ERROR:
File "XXXX", line 3
    if(x<=0):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:23:43) 
-- CODE:
from math import*
x = float(input("x:")
if(x<=0):
	msg= (fx = 0)
  
-- ERROR:
File "XXXX", line 3
    if(x<=0):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:23:59) 
-- CODE:
from math import*
x = float(input("x:")
if(x<=0):
	print(x)
  
-- ERROR:
File "XXXX", line 3
    if(x<=0):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:24:08) 
-- CODE:
from math import*
x = float(input("x:"))
if(x<=0):
	print(x)
  
-- ERROR:
File "XXXX", line 3
    if(x<=0):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:24:27) 
-- CODE:
from math import*
x = float(input("x:"))
if(x<=0):
	fx= 0
  
-- ERROR:
File "XXXX", line 3
    if(x<=0):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:26:07) 
-- CODE:
from math import*
x = float(input("x:"))
if(x<=0):
	fx= 0
elif(x>0 or x<=1):
	fx= 1
-- ERROR:
File "XXXX", line 3
    if(x<=0):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:26:25) 
-- CODE:
from math import*
x = float(input("x:"))
if(x<=0):
	fx= 0
elif(x>0 or x<=1):
	fx= 1
print(fx)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:26:45) 
-- CODE:
from math import*
x = float(input("x:"))
if(x<=0):
	fx= 0
elif(x>0 or x<=1):
	fx= 1
print(fx)
elif()
-- ERROR:
File "XXXX", line 8
    elif()
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:27:42) 
-- CODE:
from math import*
x = float(input("x:"))
if(x<=0):
	fx= 0
elif(x>0 or x<=1):
	fx= 1
elif(x>1 or <=2):
	fx= x**1/2
-- ERROR:
File "XXXX", line 7
    elif(x>1 or <=2):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:27:55) 
-- CODE:
from math import*
x = float(input("x:"))
if(x<=0):
	fx= 0
elif(x>0 or x<=1):
	fx= 1
elif(x>1 or x<=2):
	fx= x**1/2
-- ERROR:
File "XXXX", line 7
    elif(x>1 or <=2):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:28:52) 
-- CODE:
from math import*
x = float(input("x:"))
if(x<=0):
	fx= 0
elif(x>0 or x<=1):
	fx= 1
elif(x>1 or x<=2):
	fx= x**1/2
elif(x>2):
	fx= x**1/3
print(fx)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:29:05) 
-- CODE:
from math import*
x = float(input("x:"))
if(x<=0):
	fx= 0
elif(x>0 or x<=1):
	fx= 1
elif(x>1 or x<=2):
	fx= x**1/2
elif(x>2):
	fx= x**1/3
print(fx)
-- EXECUTION TIME:
0.145956
-- TEST CASE 1:
---- input:
0.57
---- correct output:
1
---- user output:
1
-- TEST CASE 2:
---- input:
1.99
---- correct output:
1.4107
---- user output:
1
-- TEST CASE 3:
---- input:
2.01
---- correct output:
1.262
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:29:28) 
-- CODE:
from math import*
x = float(input("x:"))
if(x<=0):
	fx= 0
elif(x>0 or x<=1):
	fx= 1
elif(x>1 or x<=2):
	fx= x**1/2
else(x>2):
	fx= x**1/3
print(fx)
-- EXECUTION TIME:
0.146801
-- ERROR:
  File "/home/codebench/codes/1706/3032/main.py", line 9
    else(x>2):
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:29:51) 
-- CODE:
from math import*
x = float(input("x:"))
if(x<=0):
	fx= 0
   elif(x>0 or x<=1):
	fx= 1
   elif(x>1 or x<=2):
	fx= x**1/2
else(x>2):
	fx= x**1/3
print(fx)
-- EXECUTION TIME:
0.175877
-- ERROR:
  File "/home/codebench/codes/1706/3032/main.py", line 5
    elif(x>0 or x<=1):
                     ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:29:59) 
-- CODE:
from math import*
x = float(input("x:"))
if(x<=0):
	fx= 0
   elif(x>0 or x<=1):
	fx= 1
   elif(x>1 or x<=2):
	fx= x**1/2
   else(x>2):
	fx= x**1/3
print(fx)
-- EXECUTION TIME:
0.139272
-- ERROR:
  File "/home/codebench/codes/1706/3032/main.py", line 5
    elif(x>0 or x<=1):
                     ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:30:40) 
-- CODE:
from math import*
x = float(input("x:"))
if(x<=0):
	fx= 0
   elif(x>0 or x<=1):
	fx= 1
   elif(x>1 or x<=2):
	fx= x**1/2
   else(x>2):
	fx= x**1/3
print(abs(fx))
-- EXECUTION TIME:
0.216244
-- ERROR:
  File "/home/codebench/codes/1706/3032/main.py", line 5
    elif(x>0 or x<=1):
                     ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:31:19) 
-- CODE:
from math import*
x = float(input("x:"))
if(x<=0):
	fx= 0
   elif(x>0 and x<=1):
	fx= 1
   elif(x>1 or x<=2):
	fx= x**1/2
   else(x>2):
	fx= x**1/3
print(abs(fx))
-- EXECUTION TIME:
0.140809
-- ERROR:
  File "/home/codebench/codes/1706/3032/main.py", line 5
    elif(x>0 and x<=1):
                      ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:31:28) 
-- CODE:
from math import*
x = float(input("x:"))
if(x<=0):
	fx= 0
   elif(x>0 and x<=1):
	fx= 1
   elif(x>1 or x<=2):
	fx= x**1/2
   else(x>2):
	fx= x**1/3
print(abs(fx))
-- ERROR:
File "XXXX", line 5
    elif(x>0 and x<=1):
                      ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:31:57) 
-- CODE:
from math import*
x = float(input("x:"))
if(x<=0):
	fx= 0
   elif(x>0 or x<=1):
	fx= 1
   elif(x>1 or x<=2):
	fx= x**1/2
   else(x>2):
	fx= x**1/3
print(abs(fx))
-- EXECUTION TIME:
0.1619
-- ERROR:
  File "/home/codebench/codes/1706/3032/main.py", line 5
    elif(x>0 or x<=1):
                     ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:32:21) 
-- CODE:
from math import*
x = float(input("x:"))
if(x<=0):
	fx= 0
elif(x>0 or x<=1):
	fx= 1
elif(x>1 or x<=2):
	fx= x**1/2
elif(x>2):
	fx= x**1/3
print(abs(fx))
-- EXECUTION TIME:
0.125877
-- TEST CASE 1:
---- input:
0.57
---- correct output:
1
---- user output:
1
-- TEST CASE 2:
---- input:
1.99
---- correct output:
1.4107
---- user output:
1
-- TEST CASE 3:
---- input:
2.01
---- correct output:
1.262
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:33:27) 
-- CODE:
from math import*
x = float(input("x:"))
if(x<=0):
	fx= 0
elif(x>0 or x<=1):
	fx= 1
elif(x>1 or x<=2):
	fx= x**1/2
elif(x>2):
	fx= x**1/3
print(round(abs(fx, 4))
-- EXECUTION TIME:
0.0944431
-- ERROR:
  File "/home/codebench/codes/1706/3032/main.py", line 12
    
                           ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:33:58) 
-- CODE:
from math import*
x = float(input("x:"))
if(x<=0):
	fx= 0
elif(x>0 or x<=1):
	fx= 1
elif(x>1 or x<=2):
	fx= x**1/2
elif(x>2):
	fx= x**1/3
print(round(abs(fx, 4))
-- ERROR:
File "XXXX", line 12
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:34:17) 
-- CODE:
from math import*
x = float(input("x:"))
if(x<=0):
	fx= 0
elif(x>0 or x<=1):
	fx= 1
elif(x>1 or x<=2):
	fx= x**1/2
elif(x>2):
	fx= x**1/3
print(round(abs(fx, 4)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(round(abs(fx, 4)))
TypeError: abs() takes exactly one argument (2 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:36:17) 
-- CODE:
from math import*
x = float(input("x:"))
if(x<=0):
	fx= 0
elif(x>0 or x<=1):
	fx= 1
elif(x>1 or x<=2):
	fx= x**1/2
elif(x>2):
	fx= x**1/3
print(round(fx, 4))
-- EXECUTION TIME:
0.144011
-- TEST CASE 1:
---- input:
0.57
---- correct output:
1
---- user output:
1
-- TEST CASE 2:
---- input:
1.99
---- correct output:
1.4107
---- user output:
1
-- TEST CASE 3:
---- input:
2.01
---- correct output:
1.262
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
